# crossref-local

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  codecov.yml  pyproject.toml
.dev/: EXPERIMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  add_reference_indexes.sh  build_citation_index.py  calculate_journals_from_csv.py  calculate_journals_from_csv_parallel.py  calculate_major_journals.sh  calculate_major_journals_parallel.sh  check_db_stats.sh  experiment_01_citation_extraction.py  experiment_02_cocitation_similarity.py  experiment_03_bibliographic_coupling.py  experiment_04_graph_network.py  major_journals.txt  major_journals_with_issn.csv  network_output.json  run_analyze.sh  test_citation_graph_module.py  test_citation_query_optimization.py  test_query_speed.py  test_single_query.py
.dev/results/: major_journals_IF_2023_parallel.csv
.github/workflows/: cla.yml  docs.yml  publish-pypi.yml  test.yml
.scitex/dev/: config.yaml
_.venv/: pyvenv.cfg
binder/: postBuild  requirements.txt
docs/: FASTAPI_DATABASE_FIX.md  remote-deployment.md
docs/sphinx/: cli_reference.rst  conf.py  http_api.rst  index.rst  installation.rst  quickstart.rst
docs/sphinx/api/: crossref_local.rst
dois2sqlite/: .gitignore  LICENSE  NOTES.md  README.md
dois2sqlite/dois2sqlite/: models.py  representations.py
dois2sqlite/examples/cnserver/: NOTES.md  README.md  cn-quick-test.py
dois2sqlite/utils/: select-rnd-dois-from-db.py
examples/: 00_run_all.sh  01_quickstart.py  02_demo_mcp.org  04_mcp_demo.org  05_abstract_coverage.py  11_abstract_coverage.py  Dockerfile.mcp  compose_readme.py  demo.py  demo_all_in_one.py  demo_cli.sh  docker-compose.mcp.yml  quickstart.ipynb  quickstart_output.txt  readme_figure.yaml
examples/03_impact_factor/: 00_calculate_impact_factor.py  01_compare_jcr.py  02_compare_jcr_plot.py
examples/03_impact_factor/01_compare_jcr_out/: all_combined.csv  all_combined.json  high_impact.csv  neuroscience.json
examples/04_mcp_demo_out/: pipeline.mmd  tradeoff.mmd
examples/citation_network/: citation_network.html  citation_network.yaml  generate_visualization.py
examples/demo_mcp_out/: demo_mcp.tex  evolution.mmd  states.mmd
examples/impact_factor/: 00_calculate_impact_factor.py  02_compare_jcr_plot.py  run_all_demos.sh
examples/impact_factor/01_compare_jcr_out/: biomedical_engineering.csv  biomedical_engineering.json  high_impact.json  neuroscience.csv
examples/impact_factor/02_compare_jcr_plot_out/: scatter_calc_vs_jcr.yaml
impact_factor/: .gitignore  CITATIONS_REBUILD_IMPROVEMENTS.md  CITATIONS_TABLE_REBUILD.md  Makefile  NEXT_STEPS_AFTER_REBUILD.md  README.md
impact_factor/cli/: analyze_journals.py  calculate_if.py  compare_with_jcr.py
impact_factor/docs/: 01_README.md  08_IF_CALCULATION.md  CORRELATION_ANALYSIS.md  INSTALL.md  INSTALL_APPTAINER.md  JOURNAL_ANALYSIS.md  QUICKSTART.md  USAGE.md
impact_factor/legacy/: SUMMARY.md
impact_factor/scripts/database/: MIGRATION_TO_OPTIMIZED.md  build_issn_table.py  build_journals_table.py  check_db_connections.py  maintain_indexes.sh
impact_factor/scripts/deployment/: build_apptainer.sh  install_apptainer.sh  run_apptainer.sh
impact_factor/src/: __init__.py  calculator.py  journal_lookup.py
impact_factor/tests/: test_calculator.py
labs-data-file-api/: .gitignore  LICENSE.md  README.md  manage.py  requirements.txt
labs-data-file-api/.old/crossrefDataFile-back-separate-api-points/: app_urls.py  views.py
labs-data-file-api/crossrefDataFile/: api.py  app_urls.py  asgi.py  models.py  urls.py  views.py
scripts/: README.md  create_test_db.py  status.sh
scripts/database/: 00_rebuild_all.sh  02_create_missing_indexes.sh  03_rebuild_citations_table.py  03_rebuild_citations_table_optimized.py  04a_download_openalex_journals.py  04b_build_issn_table.py  04c_build_journals_table.py  04d_build_from_issn_list.py  05_build_fts5_index.py  06_calculate_abstract_ratio.py  99_check_db_connections.py  99_db_info.sh  99_maintain_indexes.sh  99_switch_to_optimized.sh  README.md
scripts/deployment/: build_apptainer.sh  install_apptainer.sh  run_apptainer.sh  run_docker.sh
scripts/deployment/mcp/: crossref-mcp.service  docker.sh  install.sh  status.sh
scripts/mcp/: install.sh
scripts/nfs/: check.sh  setup_nfs.sh  status.sh  stop.sh
src/crossref_local/: __init__.py  __main__.py  _remote_base.py  aio.py  api.py  cache.py  cache_export.py  cache_utils.py  cache_viz.py  citations.py  cli.py  cli_main.py  cli_mcp.py  config.py  db.py  fts.py  jobs.py  mcp_server.py  models.py  remote.py  server.py
src/crossref_local/_aio/: __init__.py  _impl.py
src/crossref_local/_cache/: __init__.py  export.py  utils.py
src/crossref_local/_cli/: __init__.py  cache.py  check.py  cli.py  completion.py  mcp.py  mcp_server.py  search.py
src/crossref_local/_core/: __init__.py  api.py  checker.py  config.py  db.py  export.py  fts.py  models.py  paths.py
src/crossref_local/_impact_factor/: calculator.py  journal_lookup.py
src/crossref_local/_remote/: __init__.py  base.py
src/crossref_local/_server/: __init__.py  models.py  routes_citations.py  routes_collections.py  routes_compat.py  routes_works.py
src/crossref_local/_skills/: SKILL.md
src/crossref_local/_sphinx_html/: .buildinfo  cli_reference.html  genindex.html  http_api.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
src/crossref_local/impact_factor/: __init__.py  calculator.py  journal_lookup.py
src/crossref_local/remote/: __init__.py  collections.py
tests/: conftest.py  sync_tests_with_source.sh
tests/crossref_local/: test_aio.py  test_api.py  test_cache.py  test_citations.py  test_cli.py  test_cli_completion.py  test_config.py  test_db.py  test_fts.py  test_jobs.py  test_mcp_server.py  test_models.py  test_paths_runtime.py  test_remote.py  test_server.py
tests/develop/: test_audit.py
tests/examples/: test_01_quickstart.py  test_05_abstract_coverage.py  test_compose_readme.py
tests/integration/: test_cross_package_imports.py
(+47 files in other folders)
