[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossref-local"
version = "0.5.5"
description = "Local CrossRef database with 167M+ works and full-text search"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe" }
]
keywords = [
    "crossref",
    "scholarly",
    "citations",
    "doi",
    "academic",
    "full-text-search",
    "fts5",
    "impact-factor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]
viz = [
    "pyvis>=0.3",
    "networkx>=3.0",
    "matplotlib>=3.7",
]
mcp = [
    "fastmcp>=2.0.0",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "crossref-local[dev,viz,mcp,api,docs]",
]

[project.scripts]
crossref-local = "crossref_local.cli:main"
crossref-local-mcp = "crossref_local.mcp_server:main"

[project.entry-points."scitex_dev.docs"]
crossref-local = "crossref_local"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/crossref_local"
Repository = "https://github.com/ywatanabe1989/crossref_local"

[tool.hatch.build.targets.wheel]
packages = ["src/crossref_local"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
